# python-pylite

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  run-mypy  runner.py
data/: pokemon.sql
pylite/: commands.py  input.py  output.py  pylite.py  reader.py  session.py
src/pylite/: __main__.py  commands.py  core.py  exceptions.py  input.py  output.py  pylite.py  session.py
src/pylite/commands/: __init__.py  command_defs.py  dot_command.py  registry.py
src/pylite/input/: __init__.py  file_reader.py  prompt_reader.py  reader.py
src/pylite/output/: __init__.py  modes.py  writer.py
tests/: test_pylite.py
