[tool.poetry]
name = "pylite"
version = "0.1.0"
description = ""
authors = ["Marc Patton <pattonmj8503@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
prompt-toolkit = "^3.0.18"
pygments = "^2.9.0"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
