[project]
name = "pylite"
version = "1.0.0"
description = "Simple SQLite REPL"
authors = [
    {name = "Marc Patton",email = "pattonmj8503@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "prompt-toolkit (>=3.0.50,<4.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]

[project.scripts]
pylite = "pylite.pylite:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.9.2"
mypy = "^1.14.1"
pytest = "^8.3.4"

