[project]
name = "pylite"
version = "1.0.0"
description = "Simple SQLite REPL"
authors = [
    {name = "Marc Patton",email = "pattonmj8503@gmail.com"}
]
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.13,<4.0"
dependencies = [
    "prompt-toolkit (>=3.0.50,<4.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
]

[project.scripts]
pylite = "pylite.pylite:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.9.2"
mypy = "^1.14.1"
pytest = "^8.3.4"
types-tabulate = "^0.9.0.20241207"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
